--- a/index.css
+++ b/index.css
@@ -164,7 +164,7 @@ border-bottom-right-radius: 20px;
     border-radius:30px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.10);
     
@@ -175,7 +175,7 @@ border-bottom-right-radius: 20px;
     min-height: 300px;
     max-width:600px;
     padding: 20px;
-  
+    margin-right:150px;
     margin-bottom:10px;
     border-radius: 10px;
     display: flex;
