--- a/index.css
+++ b/index.css
@@ -89,6 +89,7 @@ li>a>img{
     display: flex;
     flex-direction:column;
     align-items: start;
+   
 }
 .hero-section-heading{
     font-size: 36px;
@@ -107,7 +108,7 @@ li>a>img{
    align-items: center;
    height: 40px;
    margin:0px;
-   min-width: 400px;
+  width:auto;
    
 }
 .search-container>img{
@@ -137,6 +138,7 @@ border-top-right-radius: 20px;
 border-bottom-right-radius: 20px;
 }
 
+
 /* Hero Section list*/
 
 .hero-section-list{
@@ -157,25 +159,23 @@ border-bottom-right-radius: 20px;
 /* Latest-Blog Section*/
 .latest-blog{
     background-color: rgba(234, 234, 231, 0.833);
-    
-    
     margin-top: 40px;
     margin-left: 20px;
     border-radius:30px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.10);
     
 }
 /* Latest blog image section*/
 .latest-blog-img {
-    height: 500px;
+    
     min-height: 300px;
     max-width:600px;
     padding: 20px;
-  
+   margin-right: 150px;
     margin-bottom:10px;
     border-radius: 10px;
     display: flex;
@@ -189,11 +189,11 @@ border-bottom-right-radius: 20px;
 }
 /* Latest blog Article Section*/
 .latest-blog-article{
-    max-width: 800px ;
+    
     
     margin-left: 50px;
     margin-right: 50px;
-    min-width:33%;
+   min-width:600px;
     flex-basis: calc(33.33% - 20px);
 }
 .latest-blog-article>h2{
