--- a/index.css
+++ b/index.css
@@ -90,9 +90,7 @@ li>a>img{
 /* Heading and search bar*/
 .left{
     padding:50px 120px 50px;
-    display: flex;
-    flex-direction:column;
-    align-items: start;
+   
    
 }
 .hero-section-heading{
@@ -108,31 +106,34 @@ li>a>img{
 .search-container{
 
    display:flex;
-   justify-content: center;
-   align-items: center;
+   overflow: hidden;
    height: 40px;
-   margin:0px;
-  width:auto;
+   margin:20px 0px;
+   width: 540px;
+  height:auto;
    
 }
 
 
-.search-container>input{
+.hero-input{
+    flex:2;
+    font-size: 20px;
     height:40px;
-    width:200px;
-    min-width: 200px;
     padding:10px;
-        border:none;
+    border:none;
     padding:10px;
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
+    outline:none;
 }
-.search-container>button{
+.hero-btn{
+flex:1;
+border:none;
 height: 60px;
-padding: 10px;
+padding: 25px 10px;
 font-size:medium;
 font-weight:bold;
-width:100px;
+width:auto;
 background-color: darkslateblue;
 color:white;
 border-top-right-radius: 20px;
@@ -143,30 +144,21 @@ cursor: pointer;
     box-shadow: 1px 1px 8px 1px #dcdcdc;
     
   }
-@media screen and (max-width: 1200px) {
-    .left {
-        padding: 20px;
-        min-width: auto;
+@media screen and (max-width: 110px) {
+    .search-container{
+        width: 80vw;
     }
-
-    .search-container {
-        display: flex;
-        justify-content: start;
-        width: 80vb;
+    .left{
+        flex-direction: column;
+        align-items: center;
     }
-
-    .search-container > input {
-    max-width:160px;
-    border-top-right-radius: 20px;
-    border-bottom-right-radius: 20px;
+    .hero-input{
+        flex:3;
     }
-    .search-container>button{
-    max-width: 80px;
-    max-height:40px;
-    align-items: center;
-    border-top-left-radius: 20px;
-    border-bottom-left-radius: 20px;
+    .hero-btn{
+    flex:1;
     }
+     
 }
 
 /* Hero Section list*/
