--- a/index.css
+++ b/index.css
@@ -73,6 +73,9 @@ li>a>img{
     padding-right:20px; 
     box-shadow: 2px 2px 2px grey;;
 }
+.quote>button>a{
+    color: white;
+}
 
 /* */
 /* Hero Section*/
